--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Get version
         working-directory: ./
         run: |
-          app_version="$(jq -r '.version' package.json)"
+          app_version="$(jq -r '.version' ./package.json)"
       - name: Create Version Badge
         uses: schneegans/dynamic-badges-action@v1.7.0
         with:
