--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,5 @@ jobs:
           filename: aktions_learning_pathway.json # Use test.svg if you want to use the SVG mode.
           forceUpdate: true
           label: Version
-          message: ${{ fromJSON(APP_VERSION) }}
+          message: "$APP_VERSION"
           color: green
